--- a/ex1/src/main/resources/static/index.html
+++ b/ex1/src/main/resources/static/index.html
@@ -3,9 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <title>Welcome</title>
+  <style>
+    .highligth{
+      color:red;
+      font-weight:bold;
+    }
+  </style>
 </head>
 <body>
 <h1>index</h1>
 <a href="hello.html">hello</a>
+<pre>
+  Spring boot은 Framework라서 web Application을 개발하려고 할 때
+  프로젝트만 생성하고 실행하여도 문제 없이 동작한다.
+  뿐만 아니라 기본 페이지인 index.html을 static 폴더에 넣어주면
+  첫 페이지를 이용하여 실행할 수 있다. 이때 static 안에 있는 html 파일들은
+  <span class="highligth">정적인</span> 파일이며, 오직 html 태그와 css, 자바스크립트로만 동작한다.<br>
+  메이븐을 활용하여 dependency로 Template Engine(thymeleaf, jsp, Groovy,...)
+  을 추가하면 template 폴더에 해당 파일을 생성해서  <span class="highligth">동적인</span> 웹페이지로 활용 할 수 있다.
+</pre>
 </body>
 </html>
